sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: reassignment to val
    if (k == 0){k = k+1}
                  ^AlgGnomeSort:6: error: reassignment to val
    else if (k == getValueCount-1){ k = k-1}
                                      ^AlgGnomeSort:8: error: not found: value i
    if (isSmaller(i+1,i)){
                  ^AlgGnomeSort:8: error: not found: value i
    if (isSmaller(i+1,i)){
                      ^AlgGnomeSort:9: error: not found: value i
      swap(i,i+1)
           ^AlgGnomeSort:9: error: not found: value i
      swap(i,i+1)
             ^AlgGnomeSort:10: error: reassignment to val
      k = k-1
        ^AlgGnomeSort:12: error: reassignment to val
    else {k = k+1 }
            ^