sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  for (k <- 0 to getValueCount()-2){
    if (k == 0){k = k+1}
    else if (k == getValueCount-1){ k = k-1}
    
    if (isSmaller(i+1,i)){
      swap(i,i+1)
      k = k-1
    }
    else {k = k+1 }
  }
}